logs/tlscanary.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/WorQ-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/coloredlogs'...
Listing './lib/python3.5/site-packages/coloredlogs-8.0.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/hashfs'...
Listing './lib/python3.5/site-packages/hashfs-0.7.0.dist-info'...
Listing './lib/python3.5/site-packages/humanfriendly'...
Listing './lib/python3.5/site-packages/humanfriendly-4.6.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/scandir-1.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tlscanary'...
Listing './lib/python3.5/site-packages/tlscanary/default_profile'...
Compiling './lib/python3.5/site-packages/tlscanary/firefox_downloader.py'...
***   File "./lib/python3.5/site-packages/tlscanary/firefox_downloader.py", line 48
    except urllib2.HTTPError, err:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tlscanary/js'...
Compiling './lib/python3.5/site-packages/tlscanary/main.py'...
***   File "./lib/python3.5/site-packages/tlscanary/main.py", line 180
    print "Available builds: %s" % ' '.join(build_list)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tlscanary/modes'...
Compiling './lib/python3.5/site-packages/tlscanary/modes/log.py'...
***   File "./lib/python3.5/site-packages/tlscanary/modes/log.py", line 114
    print json.dumps(log_data, indent=4, sort_keys=True)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tlscanary/sources'...
Listing './lib/python3.5/site-packages/tlscanary/template'...
Listing './lib/python3.5/site-packages/tlscanary/template/css'...
Listing './lib/python3.5/site-packages/tlscanary/template/js'...
Listing './lib/python3.5/site-packages/tlscanary/template/js/vendor'...
Listing './lib/python3.5/site-packages/tlscanary/template/js/vendor/Chart.js'...
Listing './lib/python3.5/site-packages/tlscanary/template/js/vendor/forge'...
Listing './lib/python3.5/site-packages/tlscanary-3.1.2.egg-info'...
Listing './lib/python3.5/site-packages/worq'...
Listing './lib/python3.5/site-packages/worq/pool'...
Listing './lib/python3.5/site-packages/worq/queue'...
Listing './lib/python3.5/site-packages/worq/tests'...
Listing './lib/python3.5/site-packages/worq/tests/pool'...
Listing './share'...
Listing './share/python-wheels'...
